<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="30dp"
    android:layout_height="250dp">

    <TextView
        android:id="@+id/drop_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="104dp"
        android:gravity="center"
        android:text="@string/DropFridgeName"
        android:textColor="@color/primaryTextColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23" />

    <Button
        android:id="@+id/drop_dialog_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/DropFridgeAccept"
        app:layout_constraintEnd_toStartOf="@+id/drop_dialog_reject"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/drop_dialog_reject" />

    <Button
        android:id="@+id/drop_dialog_reject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DropFridgeReject"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.773"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drop_dialog_title"
        app:layout_constraintVertical_bias="0.757" />


</androidx.constraintlayout.widget.ConstraintLayout>